tests/core/error/triples-1.rq
# Use unknown class
SELECT ?u { ?u a nrl:asdfqwertyuiop }
